# basecrm-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpublish.yml
basecrm/: __init__.py  client.py  coercion.py  configuration.py  errors.py  http_client.py  services.py  sync.py  version.py
basecrm/test/: __init__.py  test_accounts_service.py  test_associated_contacts_service.py  test_coercion.py  test_contacts_service.py  test_deal_sources_service.py  test_deal_unqualified_reasons_service.py  test_deals_service.py  test_decimal_deal_values.py  test_http_client.py  test_lead_sources_service.py  test_lead_unqualified_reasons_service.py  test_leads_service.py  test_line_items_service.py  test_loss_reasons_service.py  test_notes_service.py  test_orders_service.py  test_pipelines_service.py  test_products_service.py  test_sources_service.py  test_stages_service.py  test_sync.py  test_sync_service.py  test_tags_service.py  test_tasks_service.py  test_text_messages_service.py  test_users_service.py  test_visit_outcomes_service.py  test_visits_service.py  testutils.py
