[metadata]
name = basecrm
author = BaseCRM developers
author_email = developers@getbase.com
summary = BaseCRM Official API V2 library client for Python
description-file = README.rst
home-page = https://github.com/basecrm/basecrm-python
license = MIT
classifier =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.6
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.2
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Topic :: Software Development :: Libraries :: Python Modules
keywords = 
  basecrm
  
[files]
packages = 
    basecrm
    basecrm.test
[entry_points]

#console_scripts = 
#    run_basecrm = basecrm.test.all:main
